<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">Question 1:</string>
    <string name="question2">Question 2:</string>
    <string name="question3">Question 3:</string>
    <string name="question4">Question 4:</string>
    <string name="question5">Question 5:</string>
    <string name="question1text">Who is the captain of Indian Cricket Team?</string>
    <string name="question2text">Who is the president of US?</string>
    <string name="question3text">What is the capital of Australia?</string>
    <string name="question4text">What is the tip of Shoe-lace called?</string>
    <string name="question5text">Select the different versions of Android</string>
</resources>
