<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ayaan.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="20sp"
                style="@style/padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1text"
                android:textSize="20sp"
                style="@style/padding"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ques1">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="M.S. Dhoni"
                    android:textSize="20sp"
                    android:paddingLeft="16dp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="Virat Kohli"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Rohit Sharma"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="16dp"
                    android:text="None of the above"
                    android:textSize="20sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2text"
                style="@style/padding"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ques2">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="George W. Bush"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Donald Trump"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Bill Clinton"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Barack Obama"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3text"
                style="@style/padding"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ques3">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Melbourne"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Sydney"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin"
                    android:text="Canberra"
                    android:textSize="20sp"
                    android:paddingLeft="16dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="20sp"
                style="@style/padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4text"
                android:textSize="20sp"
                style="@style/padding"/>
            <EditText
                android:id="@+id/ques4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:inputType="textCapCharacters"
                style="@style/margin"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textSize="20sp"
                style="@style/padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5text"
                android:textSize="20sp"
                style="@style/padding"/>
            <CheckBox
                android:id="@+id/resberry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rasberry"
                style="@style/margin"
                android:textSize="20sp"
                android:paddingLeft="16dp"/>
            <CheckBox
                android:id="@+id/froyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Froyo"
                style="@style/margin"
                android:textSize="20sp"
                android:paddingLeft="16dp"/>
            <CheckBox
                android:id="@+id/honey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Honeycomb"
                style="@style/margin"
                android:textSize="20sp"
                android:paddingLeft="16dp"/>
            <CheckBox
                android:id="@+id/choco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chocopie"
                style="@style/margin"
                android:textSize="20sp"
                android:paddingLeft="16dp"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Submit"
            android:textSize="20sp"
            android:onClick="finalscore"/>
    </LinearLayout>
</ScrollView>